[package]
name = "lean-opengl-glow"
version = "0.1.0"
authors = ["Albert Faber <albert@fabtronics.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28"
nalgebra-glm = "0.18"
glow = { version = "0.12" }
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
bytemuck = "1.14"
image = "0.24"
tobj = "4.0"
ab_glyph = "0.2"

[features]
default = [
    "chapter-1",
    "chapter-2",
    "chapter-3",
    "chapter-4",
    #"chapter-5",
    #"chapter-6",
    "chapter-7",
    "chapter-8",
]
chapter-1 = []
chapter-2 = []
chapter-3 = []
chapter-4 = []
chapter-5 = []
chapter-6 = []
chapter-7 = []
chapter-8 = []
